--- a/reportdpk/api_v1/templates/index.html
+++ b/reportdpk/api_v1/templates/index.html
@@ -264,7 +264,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 
         <!-- Bitrix JS -->
-        <!-- <script src="//api.bitrix24.com/api/v1/"></script> -->
+        <script src="//api.bitrix24.com/api/v1/"></script>
 
         <!-- JS -->
 <!--        <script src="{% static 'scripts/index.js' %}"></script>-->
